--- a/css/preco.css
+++ b/css/preco.css
@@ -1,5 +1,5 @@
 .preco {
-  background: #f7f7f7;
+  background: var(--cor-1);
   padding: 60px;
   display: flex;
   flex-wrap: wrap;
@@ -8,7 +8,7 @@
 
 .preco-item {
   flex: 1 1 260px;
-  border: 4px solid white;
+  border: 4px solid var(--cor-0);
   padding: 20px;
   margin: 10px;
   /* resolver problema no navegador Safari */
@@ -17,7 +17,6 @@
 
 .preco-item h2 {
   font-size: 3em;
-  color: #a4a4a4;
   text-align: center;
   margin-top: 20px;
 }
@@ -30,8 +29,8 @@
   text-align: center;
   font-weight: bold;
   padding: 10px 0 5px 0;
-  border-top: 4px solid white;
-  border-bottom: 4px solid white;
+  border-top: 4px solid var(--cor-0);
+  border-bottom: 4px solid var(--cor-0);
 }
 
 .preco-item sup {
@@ -43,7 +42,6 @@
   margin: 20px auto;
   font-size: 1.25em;
   font-style: italic;
-  color: #7c7c7c;
 }
 
 .preco-item li {
@@ -58,7 +56,7 @@
   display: block;
   width: 6px;
   height: 6px;
-  background: #2c70ff;
+  background: var(--cor-5);
   border-radius: 50%;
 }
 
