--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 /* Seção Newsletter */
 
 .newsletter {
-  background: #f7f7f7;
+  background: var(--cor-1);
   /* desta forma não precisa de duas divs (div-bg e div-conteudo). A própria div-conteudo controla a cor e a distância da margem. */
   padding: 60px calc((100% - 960px) / 2);
   display: flex;
@@ -15,14 +15,12 @@
 
 .newsletter-info h1 {
   font-size: 3em;
-  color: #a4a4a4;
 }
 
 .newsletter-info p {
   font-size: 1.25em;
   font-style: italic;
   max-width: 230px;
-  color: #7c7c7c;
   margin-bottom: 10px;
 }
 
@@ -37,10 +35,9 @@
 .newsletter-form input {
   flex: 3 1 260px;
   font-size: 1.25em;
-  color: #7c7c7c;
   font-style: italic;
   font-family: "Nunito", Helvetica, Arial, sans-serif;
-  border: 4px solid #2c70ff;
+  border: 4px solid var(--cor-5);
   background: transparent;
   padding: 15px 10px;
   margin: 0px;
@@ -53,8 +50,7 @@
   font-size: 2.25em;
   font-weight: bold;
   text-transform: uppercase;
-  background: #2c70ff;
-  color: white;
+  background: var(--cor-5);
   border: none;
   margin: 0px;
   cursor: pointer;
@@ -71,7 +67,7 @@
 
 .footer {
   display: flex;
-  background: #2c70ff;
+  background: var(--cor-5);
   height: 200px;
   align-items: center;
 }
@@ -80,5 +76,4 @@
   flex: 1;
   text-align: center;
   font-size: 2.25em;
-  color: #122ab2;
 }
