--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,8 +11,8 @@
 /* Sobre */
 
 .sobre {
-  border-top: 2px solid #2c70ff;
-  border-bottom: 2px solid #2c70ff;
+  border-top: 2px solid var(--cor-5);
+  border-bottom: 2px solid var(--cor-5);
   max-width: 960px;
   margin: 0 auto;
   padding: 60px 0;
@@ -34,7 +34,6 @@
   font-size: 1.25em;
   line-height: 1.4;
   margin-bottom: 1em;
-  color: #7c7c7c;
 }
 
 .sobre-info img {
